# freemobile-SMS-notifications

./: .gitignore  README.md  pyproject.toml  requirements.txt  sms.py  template_config.py
.github/workflows/: ci.yml
sms/: __init__.py  __main__.py  cli.py  sms.py
tests/: test_sms.py
