[project]
name = "freemobile"
version = "0.1.1"
dependencies = [
]
requires-python = ">=3.10"
authors = [
  {name = "Roman MASSE", email = "roman@masse.family"},
]
maintainers = [
    {name = "Roman MASSE", email = "roman@masse.family"},
]
description = "Send SMS notifications to your own mobile via any internet-connected device."
readme = "README.md"
license = "Unlicense"
license-files = ["LICEN[CS]E.*"]
keywords = ["sms", "free", "mobile", "freemobile", "notification"]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/rambobinator/freemobile-SMS-notifications"
Documentation = "https://github.com/rambobinator/freemobile-SMS-notifications"
Repository = "https://github.com/rambobinator/freemobile-SMS-notifications"
"Bug Tracker" = "https://github.com/rambobinator/freemobile-SMS-notifications/issues"
Changelog = "https://github.com/rambobinator/freemobile-SMS-notifications/releases"

[project.scripts]
freemobile = "sms.cli:run"